--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "private": true,
   "main": "src/index.js",
   "scripts": {
-    "dev": "nodemon ./src/index.js",
+    "serve": "babel-node src/index.js",
+    "dev": "nodemon --exec npm run serve",
     "test": "jest --env=node",
     "test:ci:all": "jest --env=node",
     "test:watch": "jest --watch",
