--- a/package.json
+++ b/package.json
@@ -53,8 +53,10 @@
     "jest": "^26.6.3",
     "jest-environment-node": "^26.6.2",
     "lint-staged": "^10.5.4",
+    "multer": "^1.4.4",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
+    "shortid": "^2.2.16",
     "supertest": "^6.1.3"
   },
   "dependencies": {
