--- a/package.json
+++ b/package.json
@@ -66,7 +66,9 @@
     "helmet": "^4.4.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.5",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.4",
+    "shortid": "^2.2.16"
   },
   "engines": {
     "node": ">=14.0.0"
