--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "supertest": "^6.1.3"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
